; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_log.c_log_level_up.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_log.c_log_level_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.logger = type { i64 }

@logger = common dso_local global %struct.logger zeroinitializer, align 8
@LOG_PVERB = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [19 x i8] c"up log level to %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @log_level_up() #0 {
  %1 = alloca %struct.logger*, align 8
  store %struct.logger* @logger, %struct.logger** %1, align 8
  %2 = load %struct.logger*, %struct.logger** %1, align 8
  %3 = getelementptr inbounds %struct.logger, %struct.logger* %2, i32 0, i32 0
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @LOG_PVERB, align 8
  %6 = icmp slt i64 %4, %5
  br i1 %6, label %7, label %16

7:                                                ; preds = %0
  %8 = load %struct.logger*, %struct.logger** %1, align 8
  %9 = getelementptr inbounds %struct.logger, %struct.logger* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = add nsw i64 %10, 1
  store i64 %11, i64* %9, align 8
  %12 = load %struct.logger*, %struct.logger** %1, align 8
  %13 = getelementptr inbounds %struct.logger, %struct.logger* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @log_safe(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i64 %14)
  br label %16

16:                                               ; preds = %7, %0
  ret void
}

declare dso_local i32 @log_safe(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
